align top-bar/ sidebar fixed

--- a/src/components/04-modules/sidebar-blog/sidebar-blog.scss
+++ b/src/components/04-modules/sidebar-blog/sidebar-blog.scss
@@ -11,6 +11,15 @@
     &__content {
 
     }
+
+    &__text{
+      padding: 102px;
+      max-width:700px;
+    }
+
+    p {
+      text-align: justify;
+    }
 }
 
 .categories-list {
@@ -35,4 +44,18 @@
     background-color: rgba($teal, .1);
     background: linear-gradient(90deg, rgba($teal, 0) 0%, rgba($teal, .3) 100%);
   }
+}
+
+.content{
+  padding: 80px;
+}
+
+.scroll {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.scroll + .sidebar-blog__text {
+  padding-top: 300px;
 }
